# forecasting

./: Forecasting.code-workspace  docker-compose.yml
contracts/schemas/: prophet-input.json
core/: .gitignore  docker-compose.yml  drizzle.config.ts  nuxt.config.ts  package.json
core/app/components/chart/: ChartForecast.client.vue  ChartLine.client.vue  ChartLine.server.vue
core/app/layouts/: Dashboard.vue
core/app/pages/: chart-example.vue
core/app/pages/models/: univariated.vue
core/app/types/: index.d.ts
core/modules/schemas/: index.ts
core/schemas/: MultiModelRequest.json  ProphetRequest.json  ProphetResponse.json  SarimaRequest.json  SarimaResponse.json  forecast.json
core/server/api/: AMZN.csv  test.get.ts  univariated-series.get.ts  upload-mock-data.get.ts
core/server/api/time-series/: [id].get.ts  [id].post.ts
core/server/database/: schema.ts
core/server/database/migrations/: 0000_steady_silver_surfer.sql  0001_add_time_series_tables.sql  0002_magical_talisman.sql  0003_finalize_schema_cleanup.sql  0004_boring_spitfire.sql  0005_luxuriant_lucky_pierre.sql
core/server/plugins/: rabbitmq.ts
core/server/utils/: adapters.ts  constants.ts  drizzle.ts  habbitmq.ts  processing.ts  protobuf.ts
core/shared/types/: index.d.ts
core/shared/utils/: schemas.ts
services/prophet/: .gitignore  pyproject.toml
services/prophet/scripts/: codegen.py  dev.py
services/python/: handlers.py  main.py  messaging.py  pyproject.toml  shared_types.py  verify_consumer.py
services/python/scripts/: codegen.py  codegen_proto.py  codegen_pydantic.py  dev.py
(+7 files in other folders)
